--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,13 +7,13 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.tcc.fgapool.ui.home.HomeFragment"
+        android:name="com.tcc.fgapool.ui.profile.ProfileFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.tcc.fgapool.ui.dashboard.DashboardFragment"
+        android:name="com.tcc.fgapool.ui.rides.RidesFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" />
 
