Setting user name and profile pic from google auth

--- a/app/src/main/res/values/courses_array.xml
+++ b/app/src/main/res/values/courses_array.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="courses_array">
+        <item>Curso</item>
         <item>Engenharia Aeroespacial</item>
         <item>Engenharia Automotiva</item>
         <item>Engenharia de Energia</item>
