--- a/app/src/main/res/layout/activity_complete_registration.xml
+++ b/app/src/main/res/layout/activity_complete_registration.xml
@@ -150,7 +150,7 @@
     </TextView>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonSend"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Enviar"
