--- a/app/src/main/res/layout/activity_complete_registration.xml
+++ b/app/src/main/res/layout/activity_complete_registration.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
-    android:background="#006978"
+    android:background="#055429"
     tools:context=".CompleteRegistration">
 
     <androidx.cardview.widget.CardView
@@ -188,6 +188,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="3dp"
         android:elevation="2dp"
+        android:textColor="#04391C"
         android:text="Nome Sobrenome"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -197,15 +198,17 @@
 
     </TextView>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonSend"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/white"
+        android:text="Cadastrar"
+        app:cornerRadius="100dp"
+        android:padding="12dp"
+        android:textColor="#04391C"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:background="@drawable/rounded_btn"
-        android:backgroundTint="@color/teal_200"
-        android:text="Enviar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
