--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -28,10 +28,15 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent=".92" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_logout2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="15dp"
+        android:textColor="@color/theme_color_light"
+        android:backgroundTint="@color/white"
+        android:drawableLeft="@drawable/ic_google"
+        app:cornerRadius="30dp"
         android:text="Sair"
         android:layout_margin="16dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
