--- a/app/src/main/res/layout/activity_bottom_navigation.xml
+++ b/app/src/main/res/layout/activity_bottom_navigation.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
+        android:padding="2dp"
         app:itemTextColor="@color/nav_color"
         app:itemIconTint="@color/nav_color"
         android:background="@drawable/rounded_shape"
