Setting input fields in OfferRide

--- a/app/src/main/res/drawable/ic_author_no_results.xml
+++ b/app/src/main/res/drawable/ic_author_no_results.xml
@@ -5,7 +5,7 @@
     android:viewportHeight="198">
   <path
       android:pathData="M151.09,146.17c-5.07,10.9 -49.72,41.19 -51.66,37.66 -1.94,-3.54 -60.58,-90.52 -50.38,-102.34 10.21,-11.81 31.83,-31.26 37.51,-30.15 5.69,1.1 16.12,9.78 16.12,9.78l22.77,37.02z"
-      android:fillColor="#569E55"/>
+      android:fillColor="#fcdb7e"/>
   <path
       android:pathData="M118.68,115.15l-3.5,-1.54c1.02,-2.3 2.96,-4.35 5.94,-6.28l2.08,3.22c-2.34,1.5 -3.82,3.01 -4.52,4.6"
       android:fillColor="#ffb229"/>
@@ -26,22 +26,22 @@
       android:fillColor="#ffb229"/>
   <path
       android:pathData="M152.06,115.67c-3.88,3.04 2.8,25.2 -0.97,30.5 -3.77,5.29 -62.1,-87.66 -64.53,-94.84 -2.42,-7.17 -7,-35.02 -1.2,-38 5.8,-2.98 52.36,55.7 52.36,55.7z"
-      android:fillColor="#468145"/>
+      android:fillColor="#fcd250"/>
   <path
       android:pathData="M110.89,146.83c1.32,7.05 -8.28,35.69 -11.46,37 -3.17,1.31 -54.2,-86.91 -60.58,-93.83 -6.38,-6.93 4.47,-33.7 4.47,-33.7z"
-      android:fillColor="#286326"/>
+      android:fillColor="#fcbd24"/>
   <path
       android:pathData="M0,99.2c6.31,-25.7 40.69,-54.67 44.42,-52.21 3.73,2.45 40.62,56.96 66.47,99.84 2.73,4.54 -22.85,8.8 -38.2,50.03 -2.59,7.42 -26.7,-53.48 -72.69,-97.67"
-      android:fillColor="#79D876"/>
+      android:fillColor="#ffeeb6"/>
   <path
       android:pathData="M152.06,115.67c19.2,-9.9 47.32,-9.48 49.12,-13.92 1.8,-4.44 -60.37,-97.66 -69.25,-100.9 -8.88,-3.26 -42.17,3.34 -46.58,12.48 -5.04,7.23 66.71,102.34 66.71,102.34"
-      android:fillColor="#79D876"/>
+      android:fillColor="#ffeeb6"/>
   <path
       android:pathData="M65.75,113.16c2.38,2.3 5.21,3.47 8.4,3.47 0.89,0 1.8,-0.09 2.72,-0.27l-0.74,-3.75a8.16,8.16 0,0 1,-7.71 -2.2,23.1 23.1,0 0,1 -2.01,-2.22l-3,2.38c0.72,0.9 1.5,1.77 2.34,2.59"
       android:fillColor="#fcd250"/>
   <path
       android:pathData="M65.8,155.35l0.38,-3.81c-3.1,-0.3 -6.97,-2.68 -8.5,-8.41l-3.7,0.99c2.04,7.62 7.45,10.8 11.83,11.23"
-      android:fillColor="#fcd250" />
+      android:fillColor="#fcd250"/>
   <path
       android:pathData="M80.09,131.35c-4.77,-4.25 -9.63,-6.86 -14.05,-7.54l-0.58,3.78c3.64,0.56 7.93,2.91 12.07,6.62z"
       android:fillColor="#fcd250"/>
@@ -191,10 +191,10 @@
       android:fillColor="#ffb229"/>
   <path
       android:pathData="M145.59,114.07c-4.04,-1.45 -8.83,-0.88 -12.77,0.62 -4.7,1.8 -6.03,4.96 -9.18,8.3 -6.74,7.17 -11.23,15.63 -8.35,25.78 2.17,7.65 8.44,13.85 15.91,16.43 9.46,-7.18 17.86,-14.67 19.9,-19.04 3.06,-4.3 -0.78,-19.72 -0.25,-27 -1.27,-2.33 -2.94,-4.25 -5.26,-5.09"
-      android:fillColor="#4D8C4C"/>
+      android:fillColor="#fcbd24"/>
   <path
       android:pathData="M152.28,139.3c0,-0.47 -0.02,-0.96 -0.05,-1.47l-0.01,-0.3 -0.11,-1.65 -0.03,-0.38 -0.15,-1.66 -0.02,-0.14c-0.05,-0.57 -0.1,-1.14 -0.17,-1.7l-0.05,-0.53 -0.17,-1.53 -0.23,-2.13v-0.03l-0.18,-1.76 -0.02,-0.3 -0.14,-1.7 -0.01,-0.12 -0.1,-1.5v-0.23l-0.03,-1.44v-0.25c0,-0.46 0.02,-0.9 0.05,-1.32 -1.27,-2.33 -2.95,-4.25 -5.27,-5.09 -4.04,-1.45 -8.83,-0.88 -12.77,0.62 -2.15,0.83 -3.6,1.94 -4.84,3.23 11.67,17.16 21.63,30.32 23.11,28.24 0.18,-0.24 0.32,-0.53 0.45,-0.84l0.08,-0.18c0.11,-0.31 0.22,-0.65 0.3,-1.01l0.04,-0.21c0.08,-0.35 0.14,-0.72 0.18,-1.12l0.03,-0.15a20.05,20.05 0,0 0,0.1 -1.67c0.02,-0.47 0.03,-0.96 0.02,-1.47v-0.2"
-      android:fillColor="#468145"/>
+      android:fillColor="#ffb229"/>
   <path
       android:pathData="M134.89,102.73s37.45,37.14 41.04,40.53c3.6,3.4 9.33,9.65 11.7,13.04 2.36,3.39 5.6,4.3 8.18,1.8 2.59,-2.51 0.3,-3.9 -3.03,-7.66 -3.33,-3.77 -13.9,-14 -18.8,-19.43 -6.45,-7.16 -15.73,-15.61 -24.66,-23.85 -8.7,-8.03 -15.3,-16.98 -17.54,-15.25 -2.24,1.72 3.1,10.82 3.1,10.82"
       android:fillColor="#92cdfa"/>
@@ -254,7 +254,7 @@
       android:fillColor="#f8fafb"/>
   <path
       android:pathData="M70.38,191.18c-0.38,0 -0.75,-0.22 -0.92,-0.57 -0.07,-0.12 -6.63,-12.93 -10.18,-17.22a1.05,1.05 0,0 1,1.6 -1.33c2.74,3.31 7,11.08 9.13,15.11 1.23,-4.95 3.83,-14.02 6.74,-15.39a1.05,1.05 0,0 1,1.38 0.5c0.25,0.52 0.03,1.14 -0.5,1.38 -1.98,0.94 -4.84,10.33 -6.23,16.7a1.04,1.04 0,0 1,-1.02 0.82"
-      android:fillColor="#286326"/>
+      android:fillColor="#fcdb7e"/>
   <path
       android:pathData="M145.03,89.34a12.51,12.51 0,0 0,-1.08 -3.96c-1.2,-6.82 -9.47,-11 -15.86,-10.8 -12.51,0.39 -19.64,13.52 -12.66,24.02 0.32,-0.16 0.68,-0.22 1.05,-0.18 -2.28,-3.78 -3.25,-8.33 -1.49,-12.41 0.15,-0.34 0.63,-0.08 0.56,0.23 -0.84,4.31 2.08,8.8 5.17,11.52 6.45,5.66 15.84,2.95 19.6,-4.37 0.11,-0.24 0.54,-0.2 0.59,0.07 0.96,6.19 -4.35,11.2 -9.88,12.62 3.76,-0.54 7.57,-2.27 9.8,-4.97 0.61,-0.74 1.08,-1.59 1.48,-2.47a12.8,12.8 0,0 0,2.72 -9.3"
       android:fillColor="#f8fafb"/>
