--- a/app/src/main/res/values/gender_array.xml
+++ b/app/src/main/res/values/gender_array.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="gender_array">
-        <item>Gênero</item>
+        <item>Sexo</item>
         <item>Feminino</item>
         <item>Masculino</item>
     </string-array>
