--- a/app/src/main/res/layout/ride_recyclerview_item.xml
+++ b/app/src/main/res/layout/ride_recyclerview_item.xml
@@ -162,7 +162,7 @@
         app:layout_constraintEnd_toEndOf="@+id/imageView2" />
 
     <TextView
-        android:id="@+id/seatsAvailable"
+        android:id="@+id/vacancy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
@@ -178,12 +178,13 @@
         app:layout_constraintTop_toTopOf="@+id/imageView7" />
 
     <TextView
+        android:id="@+id/seatsAvailable"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1/3"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/imageView7"
         app:layout_constraintStart_toStartOf="@+id/imageView7"
-        app:layout_constraintTop_toBottomOf="@+id/seatsAvailable" />
+        app:layout_constraintTop_toBottomOf="@+id/vacancy" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
